package NKikimrStream;
option java_package = "ru.yandex.kikimr.proto";

message TStreamingConfig {
    message TOutputStreamConfig {
        optional uint64 MessageSizeLimit = 1 [default = 20971520];
        optional uint64 MessageBufferSize = 2 [default = 536870912];
        // Quota size is counted in response messages, not in bytes.
        optional uint32 MinQuotaSize = 3 [default = 1];
        optional uint32 MaxQuotaSize = 4 [default = 5];
        optional uint32 MaxStreamingShards = 5 [default = 5];
        // Timeouts used to interrupt inactive streams.
        optional uint64 InactiveClientTimeout = 6 [default = 600000000];
        optional uint64 InactiveServerTimeout = 7 [default = 0];
    }

    optional bool EnableInputStreams = 1 [default = true];
    optional bool EnableOutputStreams = 2 [default = true];
    optional TOutputStreamConfig OutputStreamConfig = 3;
}
